<resources>
    <string name="app_name">LogisTraffic - Gestão</string>
    <string name="adicionar">Adicionar</string>
    <string name="sobre">Sobre</string>
    <string name="enviar_not">Enviar Notificação</string>
    <string name="nomeCarga">Nome da Carga</string>
    <string name="tipoCarga">Tipo da Carga</string>
    <string name="cais">Cais</string>
    <string name="matricula">Matrícula</string>
    <string name="check">Confirmar</string>
    <string name="trabalho1">Projeto Final</string>
    <string name="trabalho2">Desenvolvido por:</string>
    <string name="bryan">Bryan Dias</string>
    <string name="diogo">Diogo Negrão</string>
    <string name="trabalho3">Programação Móvel e Sistemas Ciber-Físicos</string>
    <string name="versao">v1.0</string>
    <string name="cancelar">Cancelar</string>
    <string name="voltar">Voltar</string>
    <string name="lugar">Lugar</string>
    <string name="lugar2">Lugar: </string>
    <string name="nomeCarga2">Nome da Carga: </string>
    <string name="matricula2">Matrícula: </string>
    <string name="matricula_encontrada">Matrícula encontrada com sucesso</string>
    <string name="matricula_nao_encontrada">Matrícula não encontrada. Por favor introduza novamente.</string>
    <string name="tipoCarga2">Tipo de Carga: </string>
    <string name="pesquisamatricula">Pesquisa de matrícula</string>


</resources>
