<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <!-- Cais -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cais"
        android:text="@string/cais"
        tools:ignore="MissingConstraints"
        android:textSize="13sp"/>

    <!-- Estado do Lugar -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lugar"
        android:text="@string/lugar"
        tools:ignore="MissingConstraints"
        android:textSize="13sp"
        android:layout_below="@+id/cais"/>

    <!-- Matricula -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matricula"
        android:text="@string/matricula"
        tools:ignore="MissingConstraints"
        android:layout_below="@id/lugar"
        android:textSize="13sp"/>


</RelativeLayout>